include/madrona_escape_room_c_api.h

#ifndef MADRONA_ESCAPE_ROOM_C_API_H
#define MADRONA_ESCAPE_ROOM_C_API_H

#ifdef __cplusplus
extern "C" {
#endif

// Export macros for shared library visibility
#ifdef _WIN32
    #ifdef BUILDING_MER_DLL
        #define MER_EXPORT __declspec(dllexport)
    #else
        #define MER_EXPORT __declspec(dllimport)
    #endif
#else
    #define MER_EXPORT __attribute__((visibility("default")))
#endif

#include <stdint.h>
#include <stdbool.h>
#include <stddef.h>
#include "madrona_escape_room_c_constants.h"

// Error codes
typedef enum {
    MER_SUCCESS = 0,
    MER_ERROR_NULL_POINTER = -1,
    MER_ERROR_INVALID_PARAMETER = -2,
    MER_ERROR_ALLOCATION_FAILED = -3,
    MER_ERROR_NOT_INITIALIZED = -4,
    MER_ERROR_CUDA_FAILURE = -5,
    MER_ERROR_FILE_NOT_FOUND = -6,
    MER_ERROR_INVALID_FILE = -7,
} MER_Result;

// Opaque handle for the Manager
typedef struct MER_Manager* MER_ManagerHandle;

// Replay metadata structure
typedef struct {
    uint32_t num_worlds;
    uint32_t num_agents_per_world;
    uint32_t num_steps;
    uint32_t seed;
    char sim_name[MER_MAX_NAME_LENGTH];
    uint64_t timestamp;
} MER_ReplayMetadata;

// Execution modes
typedef enum {
    MER_EXEC_MODE_CPU = 0,
    MER_EXEC_MODE_CUDA = 1,
} MER_ExecMode;

// Tensor element types (matching TensorElementType)
typedef enum {
    MER_TENSOR_TYPE_UINT8 = 0,
    MER_TENSOR_TYPE_INT8 = 1,
    MER_TENSOR_TYPE_INT16 = 2,
    MER_TENSOR_TYPE_INT32 = 3,
    MER_TENSOR_TYPE_INT64 = 4,
    MER_TENSOR_TYPE_FLOAT16 = 5,
    MER_TENSOR_TYPE_FLOAT32 = 6,
} MER_TensorElementType;

// Tensor descriptor
typedef struct {
    void* data;                    // Pointer to tensor data
    int64_t dimensions[16];        // Tensor dimensions
    int32_t num_dimensions;        // Number of dimensions
    MER_TensorElementType element_type;  // Data type
    int64_t num_bytes;            // Total size in bytes
    int32_t gpu_id;               // GPU ID (-1 for CPU tensors)
} MER_Tensor;

// Compiled level data structure  
// NOTE: This layout MUST exactly match the C++ CompiledLevel struct in src/types.hpp
typedef struct {
    // Header fields (matching C++ CompiledLevel layout)
    int32_t num_tiles;         // Actual tiles used
    int32_t max_entities;      // BVH sizing - calculated during level compilation  
    int32_t width;             // Grid width
    int32_t height;            // Grid height
    float scale;               // World scale factor
    char level_name[MER_MAX_NAME_LENGTH];       // Level name for identification
    
    // World boundaries in world units (calculated from grid dimensions * scale)
    float world_min_x;         // Minimum X boundary in world units
    float world_max_x;         // Maximum X boundary in world units
    float world_min_y;         // Minimum Y boundary in world units
    float world_max_y;         // Maximum Y boundary in world units
    float world_min_z;         // Minimum Z boundary in world units
    float world_max_z;         // Maximum Z boundary in world units
    
    // Spawn data
    int32_t num_spawns;        // Number of spawn points
    float spawn_x[8];          // Spawn X positions (MAX_SPAWNS buffer)
    float spawn_y[8];          // Spawn Y positions (MAX_SPAWNS buffer)
    float spawn_facing[8];     // Spawn facing angles in radians (MAX_SPAWNS buffer)
    
    // Tile data arrays (size matches CompiledLevel::MAX_TILES, use mer_get_max_tiles() to get value)
    int32_t object_ids[MER_MAX_TILES];   // Asset ID for each tile (from AssetIDs namespace)
    float tile_x[MER_MAX_TILES];         // World X position
    float tile_y[MER_MAX_TILES];         // World Y position
    float tile_z[MER_MAX_TILES];         // World Z position
    bool tile_persistent[MER_MAX_TILES]; // Whether tile persists across episodes
    bool tile_render_only[MER_MAX_TILES]; // Whether tile is render-only (no physics)
    int32_t tile_entity_type[MER_MAX_TILES]; // EntityType integer values (0=None, 1=Cube, 2=Wall, 3=Agent)
    int32_t tile_response_type[MER_MAX_TILES]; // ResponseType values (0=Dynamic, 1=Kinematic, 2=Static)
    
    // Transform data arrays (per-tile scale and rotation)
    float tile_scale_x[MER_MAX_TILES];   // Local X scale
    float tile_scale_y[MER_MAX_TILES];   // Local Y scale
    float tile_scale_z[MER_MAX_TILES];   // Local Z scale
    float tile_rot_w[MER_MAX_TILES];     // Quaternion W component
    float tile_rot_x[MER_MAX_TILES];     // Quaternion X component
    float tile_rot_y[MER_MAX_TILES];     // Quaternion Y component
    float tile_rot_z[MER_MAX_TILES];     // Quaternion Z component
    
    // Randomization arrays (per-tile random ranges)
    float tile_rand_x[MER_MAX_TILES];    // Random X offset range (-range/2 to +range/2)
    float tile_rand_y[MER_MAX_TILES];    // Random Y offset range (-range/2 to +range/2)
    float tile_rand_z[MER_MAX_TILES];    // Random Z offset range (-range/2 to +range/2)
    float tile_rand_rot_z[MER_MAX_TILES]; // Random Z-axis rotation range in radians
} MER_CompiledLevel;

// Manager configuration
typedef struct {
    MER_ExecMode exec_mode;
    int gpu_id;
    uint32_t num_worlds;
    uint32_t rand_seed;
    bool auto_reset;
    bool enable_batch_renderer;
    uint32_t batch_render_view_width;   // Default: 64
    uint32_t batch_render_view_height;  // Default: 64
} MER_ManagerConfig;

// Constants - Observation sizes
#define MER_SELF_OBSERVATION_SIZE 5
#define MER_STEPS_REMAINING_SIZE 1
#define MER_AGENT_ID_SIZE 1
#define MER_TOTAL_OBSERVATION_SIZE (MER_SELF_OBSERVATION_SIZE + MER_STEPS_REMAINING_SIZE + MER_AGENT_ID_SIZE)

// Constants - Simulation parameters
#define MER_NUM_AGENTS 1
#define MER_NUM_ROOMS 1
#define MER_MAX_ENTITIES_PER_ROOM 6
#define MER_EPISODE_LENGTH 200

// Action constants - Move amount
#define MER_MOVE_STOP 0
#define MER_MOVE_SLOW 1
#define MER_MOVE_MEDIUM 2
#define MER_MOVE_FAST 3

// Action constants - Move angle (8 directions)
#define MER_MOVE_FORWARD 0
#define MER_MOVE_FORWARD_RIGHT 1
#define MER_MOVE_RIGHT 2
#define MER_MOVE_BACKWARD_RIGHT 3
#define MER_MOVE_BACKWARD 4
#define MER_MOVE_BACKWARD_LEFT 5
#define MER_MOVE_LEFT 6
#define MER_MOVE_FORWARD_LEFT 7

// Action constants - Rotation
#define MER_ROTATE_FAST_LEFT 0
#define MER_ROTATE_SLOW_LEFT 1
#define MER_ROTATE_NONE 2
#define MER_ROTATE_SLOW_RIGHT 3
#define MER_ROTATE_FAST_RIGHT 4

// Manager lifecycle functions
MER_EXPORT MER_Result mer_create_manager(
    MER_ManagerHandle* out_handle,
    const MER_ManagerConfig* config,
    const MER_CompiledLevel* compiled_levels,  // Array of levels (one per world), NULL for default
    uint32_t num_compiled_levels               // Length of compiled_levels array
);

MER_EXPORT MER_Result mer_destroy_manager(MER_ManagerHandle handle);

// Level validation functions
MER_EXPORT MER_Result mer_validate_compiled_level(const MER_CompiledLevel* level);

// Simulation functions
MER_EXPORT MER_Result mer_step(MER_ManagerHandle handle);

// Tensor access functions
MER_EXPORT MER_Result mer_get_reset_tensor(MER_ManagerHandle handle, MER_Tensor* out_tensor);
MER_EXPORT MER_Result mer_get_action_tensor(MER_ManagerHandle handle, MER_Tensor* out_tensor);
MER_EXPORT MER_Result mer_get_reward_tensor(MER_ManagerHandle handle, MER_Tensor* out_tensor);
MER_EXPORT MER_Result mer_get_done_tensor(MER_ManagerHandle handle, MER_Tensor* out_tensor);
MER_EXPORT MER_Result mer_get_self_observation_tensor(MER_ManagerHandle handle, MER_Tensor* out_tensor);
MER_EXPORT MER_Result mer_get_steps_remaining_tensor(MER_ManagerHandle handle, MER_Tensor* out_tensor);
MER_EXPORT MER_Result mer_get_progress_tensor(MER_ManagerHandle handle, MER_Tensor* out_tensor);
MER_EXPORT MER_Result mer_get_rgb_tensor(MER_ManagerHandle handle, MER_Tensor* out_tensor);
MER_EXPORT MER_Result mer_get_depth_tensor(MER_ManagerHandle handle, MER_Tensor* out_tensor);

// Control functions (for viewer)
MER_EXPORT MER_Result mer_trigger_reset(MER_ManagerHandle handle, int32_t world_idx);
MER_EXPORT MER_Result mer_set_action(
    MER_ManagerHandle handle,
    int32_t world_idx,
    int32_t move_amount,
    int32_t move_angle,
    int32_t rotate
);

// Trajectory logging
MER_EXPORT MER_Result mer_enable_trajectory_logging(
    MER_ManagerHandle handle,
    int32_t world_idx,
    int32_t agent_idx,
    const char* filename  // NULL for stdout
);

MER_EXPORT MER_Result mer_disable_trajectory_logging(MER_ManagerHandle handle);

// Recording functionality
MER_EXPORT MER_Result mer_start_recording(
    MER_ManagerHandle handle,
    const char* filepath,
    uint32_t seed
);

MER_EXPORT MER_Result mer_stop_recording(MER_ManagerHandle handle);
MER_EXPORT MER_Result mer_is_recording(MER_ManagerHandle handle, bool* out_is_recording);

// Replay metadata reading (static function - no handle needed)
MER_EXPORT MER_Result mer_read_replay_metadata(
    const char* filepath,
    MER_ReplayMetadata* out_metadata
);

// Replay functionality
MER_EXPORT MER_Result mer_load_replay(MER_ManagerHandle handle, const char* filepath);
MER_EXPORT MER_Result mer_has_replay(MER_ManagerHandle handle, bool* out_has_replay);
MER_EXPORT MER_Result mer_replay_step(MER_ManagerHandle handle, bool* out_success);
MER_EXPORT MER_Result mer_get_replay_step_count(
    MER_ManagerHandle handle,
    uint32_t* out_current,
    uint32_t* out_total
);

// Utility functions
MER_EXPORT const char* mer_result_to_string(MER_Result result);

// Get CompiledLevel constants
MER_EXPORT int32_t mer_get_max_tiles(void);
MER_EXPORT int32_t mer_get_max_spawns(void);

// Asset descriptor functions
// Get counts
MER_EXPORT int32_t mer_get_physics_assets_count(void);
MER_EXPORT int32_t mer_get_render_assets_count(void);

// Get asset names by index
MER_EXPORT const char* mer_get_physics_asset_name(int32_t index);
MER_EXPORT const char* mer_get_render_asset_name(int32_t index);

// Lookup object IDs by name
MER_EXPORT int32_t mer_get_physics_asset_object_id(const char* name);
MER_EXPORT int32_t mer_get_render_asset_object_id(const char* name);

#ifdef __cplusplus
}
#endif

#endif // MADRONA_ESCAPE_ROOM_C_API_H